syntax = "proto3";

package blogging;

option go_package = "./blogging";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "blogging/common.proto";

service BloggingManagementService {
  rpc GetDashboard(GetDashboardRequest) returns (GetDashboardResponse) {
    option (google.api.http) = {
      get: "/api/v1/management/dashboard"
    };
  }

  rpc GetPolicies(GetPoliciesRequest) returns (GetPoliciesResponse) {
    option (google.api.http) = {
      get: "/api/v1/management/policy"
    };
  }

  rpc UpdatePolicies(UpdatePoliciesRequest) returns (UpdatePoliciesResponse) {
    option (google.api.http) = {
      patch: "/api/v1/management/policy"
      body: "*"
    };
  }
}

message GetDashboardRequest {
}

message  GetDashboardResponse {
  message Data {
    int32 total_blogs = 1;
    int32 total_comments = 2;
    int32 total_users = 3;
    int32 total_categories = 4;
    int32 blogs_increase_in_day = 5;
    int32 comments_increase_in_day = 6;
    int32 users_increase_in_day = 7;
    repeated BlogMetadata latest_blogs = 8;
    repeated Comment latest_comments = 9;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}

message GetPoliciesRequest {

}

message GetPoliciesResponse {
  message Data {
    repeated Policy policies = 1;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}

message UpdatePoliciesRequest {
  repeated Policy policies = 1;
}

message UpdatePoliciesResponse {
  int32 code = 1;
  string message = 2;
}
