syntax = "proto3";

package blogging;

option go_package = "./blogging";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "blogging/common.proto";


service IAMService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/iam/login"
      body: "*"
    };
  }
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/v1/iam/register"
      body: "*"
    };
  }
  rpc CheckExistUsername(CheckExistUsernameRequest) returns (CheckExistUsernameResponse) {
    option (google.api.http) = {
      get: "/api/v1/iam/check-exist-username"
    };
  }
  rpc RefreshAccessToken(RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/iam/refresh-access-token"
      body: "*"
    };
  }
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {
    option (google.api.http) = {
      post: "/api/v1/iam/change-password"
      body: "*"
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  message Data {
    string access_token = 1;
    string refresh_token =  2;
    UserInfoMetadata user_info = 3;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string name = 3;
  string display_name = 4;
  string email = 5;
  google.protobuf.StringValue phone_numbers = 6;
  google.protobuf.BoolValue gender = 7;
  google.protobuf.Int64Value birth_of_day = 8;
  google.protobuf.StringValue avatar = 9;
}

message RegisterResponse {
  int32 code = 1;
  string message = 2;
}

message CheckExistUsernameRequest{
  string username = 1;
}

message CheckExistUsernameResponse {
  message Data {
    bool alreadyExist = 1;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}

message RefreshAccessTokenRequest {
}

message RefreshAccessTokenResponse {
  message Data {
    string access_token = 1;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}

message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  int32 code = 1;
  string message = 2;
}
