syntax = "proto3";

package blogging;

option go_package = "./blogging";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "blogging/common.proto";

service UserService {
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {
    option (google.api.http) = {
      get: "/api/v1/user"
    };
  }
}

message GetUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  google.protobuf.StringValue search_name = 3;
  google.protobuf.StringValue search_by = 4;
  google.protobuf.BoolValue following = 5;
  google.protobuf.BoolValue followed_by_me = 6;
}

message  GetUsersResponse {
  message Data {
    repeated UserInfoMetadata users = 1;
    Pagination pagination = 2;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}